test_suite/alan-2022-examples/failing/002990_mutation.alan
source k169 begin if 8 integer relax end end
